# trabajo

./: .gitignore  CMakeLists.txt  README.md  log.txt  mock_api.py  resultados.txt
src/: api_cache.h  api_client.cpp  api_client.h  main.cpp  sftp_client.cpp  sftp_client.h
